- Fixed the alignment of the text inside the popup menus (Trac #316).
SVN:trunk[452]

--- a/css/light-grey.css
+++ b/css/light-grey.css
@@ -420,6 +420,7 @@ div.itop_popup > ul > li {
 
 .itop_popup li ul li a {
 	width: auto;
+	text-align: left;
 }
 
 .itop_popup li ul li a:hover {
